Modificacion de estilos

--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
     <header>
         <nav>
             <img src="https://place-hold.it/200x70/000/ddd" alt="Logo"/>
-            <ul>
-                <li><a href="#"></a>Nav Item 1</li>
-                <li><a href="#"></a>Nav Item 2</li>
-                <li><a href="#"></a>Nav Item 3</li>
-                <li><a href="#"></a>Nav Item 4</li>
-            </ul>
+            <a href="#"></a>Nav Item 1
+            <a href="#"></a>Nav Item 2
+            <a href="#"></a>Nav Item 3
+            <a href="#"></a>Nav Item 4
         </nav>
     </header>
     <main>
@@ -29,12 +27,12 @@
         <img src="https://place-hold.it/300x375/000/ddd" alt="Sub Banner">
         </section>
         <section>
-            <div>
-                <img src="https://place-hold.it/480x400/000/ddd" alt="Featured Section Banner">
-            </div>
+            <img src="https://place-hold.it/480x400/000/ddd" alt="Featured Section Banner">
             <div>
                 <h1>Featured Section Heading</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at hendrerit leo. Nullam consequat volutpat sagittis. Aenean dapibus urna eu libero dapibus condimentum. Nam odio enim, vulputate in nulla non, semper venenatis mauris. Quisque ornare, lectus a mollis rutrum, est massa bibendum purus, sit amet ultricies felis risus ac magna. Duis at pellentesque orci. Curabitur eget mattis nunc. Pellentesque feugiat odio ut lectus imperdiet pharetra. Sed ultrices elementum imperdiet. Duis at eros faucibus, scelerisque ligula sit amet, vestibulum massa. Morbi aliquam ipsum eget ultrices iaculis. Aenean elementum nunc a lacus finibus faucibus. Morbi mollis libero eget justo luctus vestibulum. Pellentesque quis massa id justo feugiat faucibus. Pellentesque imperdiet finibus tortor ut lacinia. Morbi mattis tellus ex, eu ullamcorper augue fermentum vel.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in est nisl. Nam vel eros nec nisl scelerisque dictum. Integer pretium sem vel massa pretium vulputate. Fusce interdum neque eros, quis ultrices turpis mattis finibus. Praesent pretium dolor in ipsum placerat ultrices. Praesent posuere velit eget dapibus laoreet. Vestibulum suscipit dui at viverra dictum. Pellentesque commodo metus eget felis malesuada fringilla. Mauris pharetra faucibus velit, ultricies tristique orci venenatis vitae. Quisque nec pharetra ante. Suspendisse suscipit justo non tellus suscipit imperdiet.</p>
+                <p>In hac habitasse platea dictumst. Mauris placerat lacus vitae egestas consequat. Phasellus neque mauris, aliquet sit amet eros eu, viverra imperdiet orci. Vivamus ligula dui, elementum vitae dolor a, condimentum ullamcorper lorem. Cras consectetur mattis felis, at condimentum lorem aliquet eu. Curabitur eros lacus, ultrices eu molestie vel, semper sed eros. In ut ex at augue malesuada posuere. In nisi risus, pretium eget orci id, aliquet tempus diam. Aliquam sit amet magna id libero cursus pulvinar quis vel ligula. Curabitur eget nibh eget turpis congue finibus. Integer non nunc sit amet diam consequat consequat a eget tortor. Donec eu nulla mattis, rutrum sapien vestibulum, tempus lorem. Donec arcu neque, tincidunt ac turpis non, dapibus placerat augue. Praesent ultrices leo ut enim pharetra blandit. Curabitur condimentum, turpis sit amet condimentum faucibus, ex erat vulputate arcu, sodales vehicula dui libero non ipsum. Pellentesque eget augue non risus placerat dictum sed eget massa.</p>
+                Phasellus efficitur dui a enim lacinia ullamcorper. Nulla commodo eros at diam euismod, nec lobortis orci venenatis. Vestibulum eu ante sit amet tortor tincidunt pretium. Nulla est magna, elementum ac commodo non, laoreet non quam. Aliquam erat volutpat. Ut molestie leo in sem lacinia, nec tincidunt magna dapibus. In hac habitasse platea dictumst. Curabitur molestie metus id velit convallis aliquam. Suspendisse id rutrum enim. Aenean fermentum tempus enim, in vulputate elit tincidunt et. Praesent porta nibh justo, sed viverra velit semper in. Sed ac lectus elementum, convallis nibh eu, gravida tortor. Fusce molestie hendrerit nisl, sit amet lacinia diam vehicula sed. Nulla et purus consectetur, sodales orci non, efficitur sapien.
                 <button>Call To Action</button>
             </div>
         </section>
